Add shiro suport