@@ -1,7 +1,8 @@
 package com.ucomponent.utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
 
 import java.io.UnsupportedEncodingException;
 
@@ -23,7 +24,7 @@ public class Base64Util {
 			e.printStackTrace();
 		}
 		if (b != null) {
-			s = new BASE64Encoder().encode(b);
+			s = Base64.encodeBase64String(b);//.encode(b);
 		}
 		return s;
 	}
@@ -34,9 +35,10 @@ public class Base64Util {
 		byte[] b = null;
 		String result = null;
 		if (s != null) {
-			BASE64Decoder decoder = new BASE64Decoder();
+//			BASE64Decoder decoder = new BASE64Decoder();
 			try {
-				b = decoder.decodeBuffer(s);
+				//b = decoder.decodeBuffer(s);
+				b = Base64.decodeBase64(s);
 				result = new String(b, "utf-8");
 			} catch (Exception e) {
 				e.printStackTrace();
